# CuBP

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  cleaned_results.csv  makefile  pyproject.toml
benchmarking/: README.md  benchmark.sh
sample-data/: README.md  capella-egypt.yaml  jeddah-tower.yaml  wash-dc-config.yaml
src/: CMakeLists.txt
src/cubp/: __init__.py  _core.pyi  _libcubp.pyi  args.py  coordinates.py  main.py  post_processor.py
src/cubp/backends/: __init__.py  base.py
src/cubp/backends/_libcubp_backends/: impl.py
src/cubp/backends/numpy/: coordinates.py  impl.py
src/libcubp/: bindings.cpp  bp_kernels.cu  bp_kernels.cuh  bp_manager.cu  bp_manager.h  coordinate_conversions.cu  coordinate_conversions.h  coordinate_kernels.cu  coordinate_kernels.cuh  coorindate_conversions.cuh  geodesy.cu  geodesy.h  grid_kernels.cu  grid_kernels.cuh  grid_manager.cu  grid_manager.h  kernels.cu  kernels.h  main.cpp
tests/: test_coordinate_conversions.py  test_grid_generation.py
