[project]
name = "cubp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joe Hackett", email = "joseph.p.hackett@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "sarpy>=1.3.64",
]

[project.scripts]
cubp = "cubp.main:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" }, 
    { file = "src/libcubp/**/*.{h,c,hpp,cpp,cu,cuh}" }, 
    { file = "CMakeLists.txt" }
]

[build-system]
requires = ["scikit-build-core>=0.12", "pybind11>=3", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pybind11>=3.0.3",
    "pybind11-stubgen>=2.5.5",
]
